--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,12 @@
 server {                                                       
-    listen       80;                                           
+    listen 80;                                           
     server_name _;                                                      
-    return 301 https://$host$request_uri;                               
+    return 301 https://$host$request_uri;
+}
+server {                                                       
+    listen 8080;                                           
+    server_name _;                                                      
+    location /healthz {
+        return 200 'ok';
+    }
 }
